# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  diff1.cast  pyproject.toml  ruff.toml  test_lib.py
.github/workflows/: pyci.yml
gendiff/: __init__.py  core.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: core.py  gendiff.py  parsers.py
tests/: conftest.py  test_gendiff.py  test_lib.py
tests/test_data/flat/: expected_json.txt
tests/test_data/nested/: expected_json.txt  expected_stylish.txt  file2.json
