[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [{name = "Alexandr A.", email = "mail@example.com"}]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]
